--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Index.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Index.cshtml
@@ -20,11 +20,14 @@
         <div class="col-md-6">
             <h4 class="text-center">Available Courses</h4>
             <div class="container py-2">
-                <div class="container shadow-sm py-2">
-                    <label class="col-form-label text-start" for="ViewID">Course name</label>
-                    <a class="btn btn-primary btn-sm float-end w-25 mx-1" name="ViewID" href="Course Id">View</a>
-                    <a class="btn btn-success btn-sm float-end w-25 mx-1" name="ViewID" href="Course Id">Join</a>
-                </div>
+                @foreach (var item in Model.Courses)
+                {
+                    <div class="container shadow-sm py-2">
+                        <label class="col-form-label text-start" for="ViewID">@item.Name</label>
+                        <a class="btn btn-primary btn-sm float-end w-25 mx-1" name="ViewID" href="/Courses/ViewCourse/@item.Id">View</a>
+                        <a class="btn btn-success btn-sm float-end w-25 mx-1" name="ViewID" href="Course Id">Join</a>
+                    </div>
+                }
             </div>
         </div>
     </div>
