--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/ViewCourse.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/ViewCourse.cshtml
@@ -4,14 +4,19 @@
 }
 
 <div class="container">
-    <div class="container w-75 py-2">
-        <div class="text-center">
+    <div class="row w-75 py-2 mx-auto">
+        <div class="text-center my-2">
             <h3>@Model.CourseTeacher.Name</h3>
             <span>@Model.CourseTeacher.Lastname @Model.CourseTeacher.Firstname</span>
         </div>
-        <div class="container shadow shadow-sm my-3 p-5">@Model.CourseTeacher.Description</div>
+        <div class="container shadow shadow-sm my-3 px-5 py-3">
+            <span>@Model.CourseTeacher.Description</span>
+
+            <div class="row mt-3">
+                <a class="btn btn-danger float-start col-md-6 p-0 border" style="height: 25px" href="/Courses">Back</a>
+                <a class="btn btn-success float-end col-md-6 p-0 border" style="height: 25px" href="/Courses/Join/@Model.CourseTeacher.Id/@User?.Claims.ToList()[1].Value">Join</a>
+            </div>
+        </div>
         
-        <a class="btn btn-danger" href="/Courses">Back</a>
-        <a class="btn btn-success" href="/Courses/Join/@Model.CourseTeacher.Id">Join</a>
     </div>
 </div>
