--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Create.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model CourseManagementApp.Pages.Courses.CreateModel
+@model CourseManagementApp.Pages.Courses.Teacher.CreateModel
 @{
     ViewData["Title"] = "Create Course";
 }
