--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Create.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model CourseManagementApp.Pages.Courses.Teacher.CreateModel
 @{
-    ViewData["Title"] = "Create Course";
+    //ViewData["Title"] = "Create Course";
 }
 
-<div class="container w-75">
+@*<div class="container w-75">
     <form method="post">
         <div class="mb-3">
             <label for="courseName" class="form-label">Course Name</label>
@@ -20,4 +20,4 @@
             <button type="submit" class="btn btn-primary w-25 mt-2">Create Course</button>
         </div>
     </form>
-</div>
+</div>*@
