--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Index.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="col-md-6 border border-1 pt-2">
             <h4 class="text-center">My Courses</h4>
             <div class="container py-2">
-                @foreach (var item in Model.StudentCourses)
+                @*@foreach (var item in Model.StudentCourses)
                 {
                     <div class="row shadow-sm py-2">
                         <div class="d-flex w-75 align-items-center" style="vertical">
@@ -21,24 +21,27 @@
                             <a class="w-100 h-50 btn btn-danger btn-sm float-end mx-1 border" name="ViewID" href="/Courses/Student/Leave/@item.scId">Leave</a>
                         </div>
                     </div>
-                }
+                }*@
             </div>
         </div>
         <div class="col-md-6 border border-1 pt-2">
-            <h4 class="text-center">Available Courses</h4>
+            <h4 class="text-center">Create Course</h4>
             <div class="container py-2">
-                @foreach (var item in Model.AvailableCourses)
-                {
-                    <div class="row shadow-sm py-2">
-                        <div class="d-flex w-75 align-items-center" style="vertical">
-                            <h4 class="my-0">@item.Name</h4>
-                        </div>
-                        <div class="container w-25">
-                            <a class="w-100 h-50 btn btn-primary btn-sm float-end mx-1 border" name="ViewID" href="/Courses/ViewCourse/@item.Id">View</a>
-                            <a class="w-100 h-50 btn btn-success btn-sm float-end mx-1 border" name="ViewID" href="/Courses/Student/Join/@item.Id/@User?.Claims.ToList()[1].Value">Join</a>
-                        </div>
+                <form method="post">
+                    <div class="mb-3">
+                        <label for="courseName" class="form-label">Course Name</label>
+                        <input name="CourseDTO.Name" type="text" class="form-control" id="courseName">
+                        <span asp-validation-for="@Model.CourseDTO.Name" class="text-danger"></span>
                     </div>
-                }
+                    <div class="form-floating">
+                        <textarea name="CourseDTO.Description" class="form-control" id="courseDescription" style="min-height: 250px"></textarea>
+                        <label for="CourseDTO.Description">Course Description</label>
+                        <span asp-validation-for="@Model.CourseDTO.Description" class="text-danger"></span>
+                    </div>
+                    <div class="container my-2 text-center">
+                        <button type="submit" class="btn btn-primary mt-2 w-50">Create</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
