--- a/CourseManagementApp/CourseManagementApp/Pages/Shared/_Layout.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Courses/Index">Courses</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Courses/Teacher/Create">Create Course</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">Logout</a>
                             </li>
                         }
