--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Index.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Index.cshtml
@@ -8,9 +8,9 @@
     <h3 class="text-center">Welcome @User?.Identity?.Name</h3>
     <div class="row my-3 p-3 shadow shadow-lg border border-1" style="min-height: 500px">
         <div class="col-md-6 border border-1 pt-2">
-            <h4 class="text-center">My Courses</h4>
+            <h4 class="text-center">Courses Created</h4>
             <div class="container py-2">
-                @*@foreach (var item in Model.StudentCourses)
+                @foreach (var item in Model.TeacherCourses)
                 {
                     <div class="row shadow-sm py-2">
                         <div class="d-flex w-75 align-items-center" style="vertical">
@@ -18,10 +18,10 @@
                         </div>
                         <div class="container w-25">
                             <a class="w-100 h-50 btn btn-primary btn-sm float-end mx-1 border" name="ViewID" href="/Courses/ViewCourse/@item.Id">View</a>
-                            <a class="w-100 h-50 btn btn-danger btn-sm float-end mx-1 border" name="ViewID" href="/Courses/Student/Leave/@item.scId">Leave</a>
+                            <a class="w-100 h-50 btn btn-danger btn-sm float-end mx-1 border" name="ViewID" href="/Courses/Teacher/Delete/@item.scId">Delete</a>
                         </div>
                     </div>
-                }*@
+                }
             </div>
         </div>
         <div class="col-md-6 border border-1 pt-2">
