Teacher course deletion - implemented

--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/ViewCourse.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/ViewCourse.cshtml
@@ -13,8 +13,7 @@
             <span>@Model.CourseTeacher.Description</span>
 
             <div class="row mt-3">
-                <a class="btn btn-danger float-start col-md-6 p-0 border" style="height: 25px" href="/Courses">Back</a>
-                <a class="btn btn-success float-end col-md-6 p-0 border" style="height: 25px" href="/Courses/Join/@Model.CourseTeacher.Id/@User?.Claims.ToList()[1].Value">Join</a>
+                <a class="btn btn-danger float-start col-md-6 p-0 mx-auto border" style="height: 25px" href="/Courses">Back</a>
             </div>
         </div>
         
