--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Index.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Index.cshtml
@@ -14,11 +14,11 @@
                 {
                     <div class="row shadow-sm py-2">
                         <div class="d-flex w-75 align-items-center" style="vertical">
-                            <h4 class="my-0">@item.Name</h4>
+                            <h5 class="my-0">@item.Name</h5>
                         </div>
                         <div class="container w-25">
                             <a class="w-100 h-50 btn btn-primary btn-sm float-end mx-1 border" name="ViewID" href="/Courses/ViewCourse/@item.Id">View</a>
-                            <a class="w-100 h-50 btn btn-danger btn-sm float-end mx-1 border" name="ViewID" href="/Courses/Teacher/Delete/@item.scId">Delete</a>
+                            <a class="w-100 h-50 btn btn-danger btn-sm float-end mx-1 border" name="ViewID" href="/Courses/Teacher/Delete/@item.Id">Delete</a>
                         </div>
                     </div>
                 }
