--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Edit.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/Teacher/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "{id:int}"
 @model CourseManagementApp.Pages.Courses.Teacher.EditModel
 @{
-    ViewData["Title"] = "Create Course";
+    ViewData["Title"] = "Edit Course";
 }
 
 <div class="container w-75">
