--- a/CourseManagementApp/CourseManagementApp/Pages/Courses/ViewCourse.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Courses/ViewCourse.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "{id:int}"
 @model CourseManagementApp.Pages.Courses.ViewCourseModel
 @{
+    ViewData["Title"] = "View Course";
 }
 
 <div class="container">
