--- a/CourseManagementApp/CourseManagementApp/Pages/Shared/_Layout.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Shared/_Layout.cshtml
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">CourseManagementApp</a>
+            <div class="container w-75">
+                <a class="navbar-brand" asp-area="" asp-page="/Index">CMApp</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,13 +27,13 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Courses/Index">Courses</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item ms-auto">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Account/Logout">Logout</a>
                             </li>
                         }
                         else
                         {
-                            <li class="nav-item">
+                            <li class="nav-item ms-auto">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Account/Login">Login</a>
                             </li>
                         }
