--- a/CourseManagementApp/CourseManagementApp/Pages/Index.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>This application was created as a final project for SEV-OPA. You can find more about this application at the following Github <a href="https://github.com/Zeenus/CMApp">link</a>.</p>
 </div>
