--- a/CourseManagementApp/CourseManagementApp/Pages/Shared/_Layout.cshtml
+++ b/CourseManagementApp/CourseManagementApp/Pages/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
     </div>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - CourseManagementApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - CourseManagementApp - Stelios Vakoufis
         </div>
     </footer>
 
